# Savages

./: LICENSE  README.md  dataset.py  main.ipynb  prompt.py  pyproject.toml  txt_to_jsonl.py  util.py
Bo/: Arthur Schopenhauer_The World as Will and Idea (Vol. 3 of 3)_paragraph.jsonl  Arthur Schopenhauer_The World as Will and Idea (Vol. 3 of 3)_sentence.jsonl  Friedrich Wilhelm Nietzsche_The Birth of Tragedy; or, Hellenism and Pessimism_paragraph.jsonl  Friedrich Wilhelm Nietzsche_The Birth of Tragedy; or, Hellenism and Pessimism_sentence.jsonl  Georg Wilhelm Friedrich Hegel_The Logic of Hegel_paragraph.jsonl  Georg Wilhelm Friedrich Hegel_The Logic of Hegel_sentence.jsonl  Immanuel Kant_Kant's Critique of Judgement_paragraph.jsonl  Ludwig Feuerbach_The Essence of Christianity_paragraph.jsonl  Ludwig Feuerbach_The Essence of Christianity_sentence.jsonl  Plato_Phaedo_paragraph.jsonl  PostProcessing.py  README.md  authors.json  clean_log.py  config.json  inference.py  log.json  output_meta-llama-Llama-2-13b-chat-hf_20240312010157.txt  output_meta-llama-Llama-2-13b-chat-hf_20240312010657.txt  output_meta-llama-Llama-2-13b-chat-hf_20240312011657.txt  output_meta-llama-Llama-2-13b-chat-hf_20240312012157.txt  output_meta-llama-Llama-2-13b-chat-hf_20240312014657.txt  output_meta-llama-Llama-2-70b-chat-hf_20240312021613.txt  output_meta-llama-Llama-2-70b-chat-hf_20240312040402.txt  output_meta-llama-Llama-2-70b-chat-hf_20240312064623.txt  output_meta-llama-Llama-2-70b-chat-hf_20240312070716.txt  output_meta-llama-Llama-2-70b-chat-hf_20240312092914.txt  pg1658.txt  pg47025.txt  (+11 more)
(+67 files in other folders)
